tests/NormalTests/paczka1/fuzzy1/18081528.err
Error in line 1: 65z A384 53,7
Error in line 4: 65z A38 2,2
Error in line 3: Ird A904 13,5
Error in line 11: 65z A9y4 54,5
Error in line 2: Q5XYGi9UUc S268 59,6
Error in line 17: Q5XYGi9UUc A384 13,9
Error in line 26: eezFQkp S268 29,9
Error in line 32: HA2x8ZK3 A384 63,5
Error in line 33: HA2x8ZK3 A904 69,2
Error in line 40: Q5XYGi9UUc S268 76,89
